Updates docker role; Updates go version

--- a/ansible/playbooks/provision-vagrant.yml
+++ b/ansible/playbooks/provision-vagrant.yml
@@ -11,8 +11,7 @@
   any_errors_fatal: true
   roles:
     - 'base'
-    - 'cadvisor'
-    - 'node_exporter'
-    - 'awsmon'
+    - 'go'
+    - 'vim'
     - 'docker'
 
