--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -6,21 +6,22 @@
     name: '{{ item }}'
     state: 'installed'
   with_items:
-    - 'curl'
-    - 'python'
-    - 'python-pip'
-    - 'vim'
-    - 'jq' 
-    - 'silversearcher-ag'
-    - 'tree'
-    - 'sysstat'
-    - 'htop'
-    - 'nmap'
-    - 'iotop'
-    - 'dnsutils'
     - 'bc'
     - 'build-essential'
     - 'cmake'
+    - 'curl'
+    - 'dnsutils'
+    - 'git' 
+    - 'htop'
+    - 'iotop'
+    - 'jq' 
+    - 'nmap'
+    - 'python'
+    - 'python-pip'
+    - 'silversearcher-ag'
+    - 'sysstat'
+    - 'tree'
+    - 'vim'
 
 - name: 'upgrade dependencies'
   apt:
