simplifies vagrantfile; adds resize2fs to vagrant

--- a/ansible/playbooks/provision-vagrant.yml
+++ b/ansible/playbooks/provision-vagrant.yml
@@ -9,6 +9,13 @@
 - hosts: 'default'
   become: true
   any_errors_fatal: true
+  tasks:
+    - name: 'resize the fs to the whole disk'
+      command: 'resize2fs /dev/sda1'
+
+- hosts: 'default'
+  become: true
+  any_errors_fatal: true
   roles:
     - 'base'
     - 'go'
