Updates docker provisioning playbook to use root user

--- a/ansible/playbooks/provision-docker.yml
+++ b/ansible/playbooks/provision-docker.yml
@@ -9,6 +9,9 @@
 - hosts: 'docker'
   connection: 'docker'
   any_errors_fatal: true
+  vars:
+    user: 'root'
+    user_home: '/home/root'
   roles:
     - 'base'
     - 'go'
