Adds strace and ipvsadm

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -15,6 +15,7 @@
     - 'git' 
     - 'htop'
     - 'iotop'
+    - 'ipvsadm'
     - 'jq' 
     - 'lsof'
     - 'net-tools'
@@ -22,6 +23,7 @@
     - 'python'
     - 'python-pip'
     - 'silversearcher-ag'
+    - 'strace'
     - 'sysstat'
     - 'tree'
     - 'valgrind'
