--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -4,7 +4,7 @@
     update_cache: 'yes'
     cache_valid_time: 3600
     name: '{{ item }}'
-    state: 'installed'
+    state: 'present'
   with_items:
     - 'bc'
     - 'build-essential'
