Forces use of artful distr_release for docker roles in ami and vagrant

--- a/ansible/playbooks/provision-ami.yml
+++ b/ansible/playbooks/provision-ami.yml
@@ -16,6 +16,8 @@
 - hosts: 'aws-ami'
   become: true
   any_errors_fatal: true
+  vars:
+    docker_apt_repository_distribution_release: 'artful'
   roles:
     - 'base'
     - 'go'
