--- a/ansible/roles/docker/defaults/main.yml
+++ b/ansible/roles/docker/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
-docker_apt_release_channel: 'stable'
-docker_apt_repository: 'deb https://download.docker.com/linux/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} {{ docker_apt_release_channel }}'
+docker_apt_repository_distribution: '{{ ansible_distribution|lower }}'
+docker_apt_repository_distribution_release: '{{ ansible_distribution_release }}'
+docker_apt_repository_release_channel: 'stable'
+docker_apt_repository: 'deb https://download.docker.com/linux/{{ docker_apt_repository_distribution }} {{ docker_apt_repository_distribution_release }} {{ docker_apt_repository_release_channel }}'
 docker_group_members: 
   - 'ubuntu'
