Makes bcc repository details configurable

--- a/ansible/playbooks/provision-ami.yml
+++ b/ansible/playbooks/provision-ami.yml
@@ -18,6 +18,7 @@
   any_errors_fatal: true
   vars:
     docker_apt_repository_distribution_release: 'artful'
+    bcc_apt_repository_distribution_release: 'artful'
   roles:
     - 'base'
     - 'go'
