--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -15,10 +15,11 @@
     - 'dnsutils'
     - 'git' 
     - 'htop'
+    - 'inetutils-traceroute'
     - 'iotop'
     - 'iproute2'
     - 'iptables'
-    - 'inetutils-traceroute'
+    - 'iputils-ping'
     - 'ipvsadm'
     - 'jq' 
     - 'libtool'
