--- a/ansible/roles/bcc/defaults/main.yml
+++ b/ansible/roles/bcc/defaults/main.yml
@@ -2,3 +2,4 @@
 bcc_apt_repository_distribution: '{{ ansible_distribution|lower }}'
 bcc_apt_repository_distribution_release: '{{ ansible_distribution_release }}'
 bcc_apt_repository_release_channel: 'main'
+bcc_apt_repository: 'deb https://repo.iovisor.org/apt/{{ bcc_apt_repository_distribution_release }} {{ bcc_apt_repository_distribution_release }} {{ bcc_apt_repository_release_channel }}'
