Opens port 30k for k8s dashboard; Adds k8s minikube role

--- a/ansible/roles/vim/tasks/main.yml
+++ b/ansible/roles/vim/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- debug:
+  msg: 'using user {{ user }} with home directory {{ user_home }}'
+
 - name: 'create .vim contents'
   file:
     path: '{{ item }}'
