Adds minkube env setting; Updates makefile with aws ssh

--- a/ansible/roles/minikube/tasks/main.yml
+++ b/ansible/roles/minikube/tasks/main.yml
@@ -22,3 +22,8 @@
     owner: '{{ user }}'
     mode: 0755
     state: 'touch'
+
+- name: 'set minikube env vars for all users'
+  copy:
+    src: 'minikube-set-env.sh'
+    dest: '/etc/profile.d'
