--- a/ansible/roles/docker/defaults/main.yml
+++ b/ansible/roles/docker/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
+docker_enable_iptables: 'true'
+docker_enable_service: 'yes'
 docker_apt_repository_distribution: '{{ ansible_distribution|lower }}'
 docker_apt_repository_distribution_release: '{{ ansible_distribution_release }}'
 docker_apt_repository_release_channel: 'stable'
