Fixes docker task

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -33,7 +33,7 @@
     enabled: '{{ docker_enable_service }}'
 
 - name: 'prepare default daemon configuration'
-  copy:
+  template:
     src: 'daemon.json'
     dest: '/etc/docker/daemon.json'
 
