--- a/ansible/playbooks/provision-vagrant.yml
+++ b/ansible/playbooks/provision-vagrant.yml
@@ -25,6 +25,10 @@
   any_errors_fatal: true
   vars:
     docker_apt_repository_distribution_release: 'artful'
+    docker_group_members:
+      - 'ubuntu'
+      - 'vagrant'
+    docker_enable_service: 'no'
     bcc_apt_repository_distribution_release: 'artful'
   roles:
     - 'base'
