--- a/vagrant/runtime/Vagrantfile
+++ b/vagrant/runtime/Vagrantfile
@@ -12,5 +12,6 @@ Vagrant.configure(2) do |config|
     v.cpus = 3
   end
 
+  config.vm.network "private_network", ip: "192.168.10.4"
   config.vm.synced_folder ".", "/vagrant", disabled: true
 end
