Fixes user_home for container provisioning

--- a/ansible/playbooks/provision-container.yml
+++ b/ansible/playbooks/provision-container.yml
@@ -16,7 +16,7 @@
   any_errors_fatal: true
   vars:
     user: 'root'
-    user_home: '/home/root'
+    user_home: '/root'
   roles:
     - 'base'
     - 'go'
