adds linux headers

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -26,6 +26,7 @@
     - 'ipvsadm'
     - 'jq' 
     - 'libtool'
+    - 'linux-headers-{{ ansible_kernel }}'
     - 'lsof'
     - 'net-tools'
     - 'nmap'
@@ -33,8 +34,8 @@
     - 'python'
     - 'python-pip'
     - 'silversearcher-ag'
-    - 'strace'
     - 'socat'
+    - 'strace'
     - 'sysstat'
     - 'tree'
     - 'unzip'
