Makes use of meta-package (linux-headers-generic)

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -26,7 +26,7 @@
     - 'ipvsadm'
     - 'jq' 
     - 'libtool'
-    - 'linux-headers-{{ ansible_kernel }}'
+    - 'linux-headers-generic'
     - 'lsof'
     - 'net-tools'
     - 'nmap'
