--- a/vagrant/runtime/Vagrantfile
+++ b/vagrant/runtime/Vagrantfile
@@ -2,16 +2,16 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = "mylinux-v0.0.7"
+  config.vm.box = 'mylinux-v0.0.8'
   config.vm.box_check_update = false
 
-  config.vm.hostname = "bionic"
+  config.vm.hostname = 'bionic'
 
-  config.vm.provider "virtualbox" do |v|
+  config.vm.provider 'virtualbox' do |v|
     v.memory = 2048
     v.cpus = 3
   end
 
-  config.vm.network "private_network", ip: "192.168.10.4"
-  config.vm.synced_folder ".", "/vagrant", disabled: true
+  config.vm.network 'private_network', ip: '192.168.10.4'
+  config.vm.synced_folder '.', '/vagrant', disabled: true
 end
