--- a/vagrant/runtime/Vagrantfile
+++ b/vagrant/runtime/Vagrantfile
@@ -14,4 +14,5 @@ Vagrant.configure(2) do |config|
 
   config.vm.network 'private_network', ip: '192.168.10.4'
   config.vm.synced_folder '.', '/vagrant', disabled: true
+  config.vm.synced_folder './shared', '/shared'
 end
