Adds port binding; adds pip set env

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -46,3 +46,7 @@
   apt:
     upgrade: 'yes'
 
+- name: 'prepare pip env setting'
+  template:
+    src: 'pip-set-env.sh'
+    dest: '/etc/profile.d'
