--- a/vagrant/runtime/Vagrantfile
+++ b/vagrant/runtime/Vagrantfile
@@ -2,7 +2,8 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = 'mylinux-v0.0.8'
+  config.vm.box = 'cirocosta/mylinux'
+  config.vm.box_version = '0.0.9'
   config.vm.box_check_update = false
 
   config.vm.hostname = 'bionic'
@@ -12,7 +13,9 @@ Vagrant.configure(2) do |config|
     v.cpus = 3
   end
 
+  config.vm.network "forwarded_port", guest: 8080, host: 8080
   config.vm.network 'private_network', ip: '192.168.10.4'
+
   config.vm.synced_folder '.', '/vagrant', disabled: true
   config.vm.synced_folder './shared', '/shared'
 end
