Reverts runtime version

--- a/vagrant/runtime/Vagrantfile
+++ b/vagrant/runtime/Vagrantfile
@@ -2,8 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = 'cirocosta/mylinux'
-  config.vm.box_version = '0.0.9'
+  config.vm.box = 'mylinux-v0.0.10'
   config.vm.box_check_update = false
 
   config.vm.hostname = 'bionic'
