--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -3,44 +3,44 @@
   apt:
     update_cache: 'yes'
     cache_valid_time: 3600
-    name: '{{ item }}'
     state: 'present'
-  with_items:
-    - 'autoconf'
-    - 'bc'
-    - 'bison'
-    - 'build-essential'
-    - 'clang-format'
-    - 'cmake'
-    - 'curl'
-    - 'dnsutils'
-    - 'flex'
-    - 'git' 
-    - 'htop'
-    - 'ifupdown'
-    - 'inetutils-traceroute'
-    - 'iotop'
-    - 'iproute2'
-    - 'iptables'
-    - 'iputils-ping'
-    - 'ipvsadm'
-    - 'jq' 
-    - 'libtool'
-    - 'linux-headers-generic'
-    - 'lsof'
-    - 'net-tools'
-    - 'nmap'
-    - 'pkg-config'
-    - 'python'
-    - 'python-pip'
-    - 'silversearcher-ag'
-    - 'socat'
-    - 'strace'
-    - 'sysstat'
-    - 'tree'
-    - 'unzip'
-    - 'valgrind'
-    - 'vim'
+    name:
+      - 'autoconf'
+      - 'bc'
+      - 'bison'
+      - 'build-essential'
+      - 'clang-format'
+      - 'cmake'
+      - 'curl'
+      - 'dnsutils'
+      - 'flex'
+      - 'git'
+      - 'htop'
+      - 'ifupdown'
+      - 'inetutils-traceroute'
+      - 'iotop'
+      - 'iproute2'
+      - 'iptables'
+      - 'iputils-ping'
+      - 'ipvsadm'
+      - 'jq'
+      - 'libtool'
+      - 'linux-headers-generic'
+      - 'linux-tools-common'
+      - 'lsof'
+      - 'net-tools'
+      - 'nmap'
+      - 'pkg-config'
+      - 'python'
+      - 'python-pip'
+      - 'silversearcher-ag'
+      - 'socat'
+      - 'strace'
+      - 'sysstat'
+      - 'tree'
+      - 'unzip'
+      - 'valgrind'
+      - 'vim'
 
 - name: 'upgrade dependencies'
   apt:
