--- a/ansible/playbooks/provision-ami.yml
+++ b/ansible/playbooks/provision-ami.yml
@@ -2,7 +2,7 @@
 # Provisions an already-running AWS machine
 # by SSHing into it and performing the necessary
 # mutations.
-# 
+#
 # Using `hosts: aws-ami` we let Packer properly
 # set the variables needed for the host connection
 # so we don't need to care about that.
@@ -18,12 +18,13 @@
   become: true
   any_errors_fatal: true
   vars:
-    docker_apt_repository_distribution_release: 'artful'
     bcc_apt_repository_distribution_release: 'artful'
+    docker_apt_repository_distribution_release: 'artful'
+    docker_enable_service: 'no'
   roles:
     - 'base'
+    - 'clang'
     - 'go'
-    - 'dep'
     - 'vim'
     - 'docker'
     - 'bcc'
