--- a/ansible/playbooks/provision-vagrant.yml
+++ b/ansible/playbooks/provision-vagrant.yml
@@ -1,7 +1,7 @@
 ---
 # Provisions an already-running vagrant machine
 # by SSHing into it.
-# 
+#
 # Using `hosts: default` we let Vagrant properly
 # set the variables needed for the host connection
 # so we don't need to care about that.
@@ -24,16 +24,14 @@
   become: true
   any_errors_fatal: true
   vars:
-    docker_apt_repository_distribution_release: 'artful'
-    docker_group_members:
-      - 'ubuntu'
-      - 'vagrant'
-    docker_enable_service: 'no'
     bcc_apt_repository_distribution_release: 'artful'
+    docker_apt_repository_distribution_release: 'artful'
+    docker_enable_service: 'no'
+    docker_group_members: [ 'ubuntu', 'vagrant' ]
   roles:
     - 'base'
+    - 'clang'
     - 'go'
-    - 'dep'
     - 'vim'
     - 'docker'
     - 'bcc'
