--- a/vagrant/runtime/Vagrantfile
+++ b/vagrant/runtime/Vagrantfile
@@ -2,9 +2,8 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = 'mylinux-v0.0.10'
+  config.vm.box = 'mylinux-v0.0.12'
   config.vm.box_check_update = false
-
   config.vm.hostname = 'bionic'
 
   config.vm.provider 'virtualbox' do |v|
@@ -13,7 +12,9 @@ Vagrant.configure(2) do |config|
   end
 
   config.vm.network 'private_network', ip: '192.168.10.4'
+  config.vm.network "forwarded_port", guest: 25000, host: 25000
 
   config.vm.synced_folder '.', '/vagrant', disabled: true
-  config.vm.synced_folder './shared', '/shared'
+
+  config.disksize.size = '15GB'
 end
