--- a/ansible/playbooks/provision-kvm.yml
+++ b/ansible/playbooks/provision-kvm.yml
@@ -1,7 +1,7 @@
 ---
 # Provisions an already-running vagrant machine
 # by SSHing into it.
-# 
+#
 # Using `hosts: default` we let Vagrant properly
 # set the variables needed for the host connection
 # so we don't need to care about that.
@@ -17,13 +17,13 @@
   become: true
   any_errors_fatal: true
   vars:
-    docker_apt_repository_distribution_release: 'artful'
     bcc_apt_repository_distribution_release: 'artful'
+    docker_apt_repository_distribution_release: 'artful'
+    docker_enable_service: 'no'
   roles:
     - 'base'
+    - 'clang'
     - 'go'
-    - 'dep'
     - 'vim'
     - 'docker'
     - 'bcc'
-    - 'bpftrace'
