Fixes cache path for ci builds
Signed-off-by: Ciro S. Costa <cscosta@pivotal.io>

--- a/ci/build.yml
+++ b/ci/build.yml
@@ -41,7 +41,7 @@ jobs:
         REPOSITORY: cirocosta/mylinux
         TAG: latest
       caches:
-      - name: cache
+      - path: cache
       inputs:
       - name: repository
         path: ./
