Adds install of go completion dependencies
Signed-off-by: Ciro S. Costa <cscosta@pivotal.io>

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -34,6 +34,7 @@
       - 'pkg-config'
       - 'python'
       - 'python-pip'
+      - 'python3-pip'
       - 'silversearcher-ag'
       - 'socat'
       - 'strace'
