Simplifies container; Removes unused vimrc
Signed-off-by: Ciro S. Costa <cscosta@pivotal.io>

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -48,7 +48,7 @@
   apt:
     upgrade: 'yes'
 
-- name: 'prepare pip env setting'
+- name: 'prepare base environment variables'
   template:
-    src: 'pip-set-env.sh'
+    src: 'set-base-env.sh'
     dest: '/etc/profile.d'
