ci: Add version to input set
Signed-off-by: Ciro S. Costa <cscosta@pivotal.io>

--- a/ci/build.yml
+++ b/ci/build.yml
@@ -68,6 +68,7 @@ jobs:
       params:
         REPOSITORY: cirocosta/mylinux
       inputs:
+      - name: version
       - name: repository
         path: ./
       outputs:
