--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -54,6 +54,26 @@
   apt:
     deb: 'https://github.com/gsamokovarov/jump/releases/download/v0.22.0/jump_0.22.0_amd64.deb'
 
+- name: 'fetch duet'
+  get_url:
+    url: 'https://github.com/git-duet/git-duet/releases/download/0.6.0/linux_amd64.tar.gz'
+    dest: '/tmp/git-duet.tgz'
+
+- name: 'install duet'
+  unarchive:
+    src: '/tmp/git-duet.tgz'
+    dest: '/usr/local/bin'
+
+- name: 'set global git config'
+  template:
+    src: '.gitconfig'
+    dest: '{{ user_home }}/.gitconfig'
+
+- name: 'set global git authors'
+  template:
+    src: '.git-authors'
+    dest: '{{ user_home }}/.git-authors'
+
 - name: 'set locales'
   locale_gen:
     name: 'en_US.UTF-8'
