--- a/vagrant/runtime/Vagrantfile
+++ b/vagrant/runtime/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = 'mylinux-0.2.1'
+  config.vm.box = 'mylinux'
   config.vm.box_check_update = false
   config.vm.hostname = 'bionic'
 
