--- a/ansible/roles/vim/tasks/main.yml
+++ b/ansible/roles/vim/tasks/main.yml
@@ -3,6 +3,8 @@
     msg: 'using user {{ user }} with home directory {{ user_home }}'
 
 - name: 'clone configuration'
+  become: 'yes'
+  become_user: '{{ user }}'
   git:
     repo: 'https://github.com/cirocosta/dot-vim'
     dest: '{{ user_home }}/.vim'
@@ -14,6 +16,8 @@
   file:
     src: '{{ user_home }}/.vim/.vimrc'
     dest: '{{ user_home }}/.vimrc'
+    owner: '{{ user }}'
+    group: '{{ user }}'
     state: 'link'
 
 - name: 'install ncm2 requirement'
@@ -22,17 +26,23 @@
     name: 'pynvim'
 
 - name: 'install vim-go binaries'
+  become: 'yes'
+  become_user: '{{ user }}'
   command: 'vim -E -c GoInstallBinaries -c q'
   environment:
     HOME: '{{ user_home }}'
     PATH: '/usr/local/go/bin:{{ ansible_env.PATH }}'
 
 - name: 'install ycm'
+  become: 'yes'
+  become_user: '{{ user }}'
   command: './install.py --clang-completer'
   args:
     chdir: '{{ user_home }}/.vim/pack/cirocosta/start/YouCompleteMe'
 
 - name: 'Set vim as default editor'
   copy:
+    owner: '{{ user }}'
+    group: '{{ user }}'
     src: 'vim-set-env.sh'
     dest: '/etc/profile.d'
