--- a/ansible/roles/kubectl/defaults/main.yml
+++ b/ansible/roles/kubectl/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 user: 'ubuntu'
-user_home: '/home/ubuntu'
+user_home: '/home/{{ user }}'
 kubectl_version: 'v1.10.3'
 kubectl_url: 'https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kubectl'
