simplify local provisioning
Signed-off-by: Ciro S. Costa <cscosta@pivotal.io>

--- a/ansible/playbooks/provision-local.yml
+++ b/ansible/playbooks/provision-local.yml
@@ -3,8 +3,7 @@
 # It assumes that `ansible` is already installed,
 # thus `python` is as well.
 
-- hosts: 'default'
-  connection: 'local'
+- hosts: 'local'
   any_errors_fatal: true
   vars:
     user: 'ubuntu'
