--- a/ansible/roles/bpftrace/tasks/main.yml
+++ b/ansible/roles/bpftrace/tasks/main.yml
@@ -1,4 +1,41 @@
 ---
+- name: 'add llvm apt key'
+  apt_key:
+    url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+    state: 'present'
+
+- name: 'add llvm apt repo'
+  apt_repository:
+    repo: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-6.0 main'
+    state: 'present'
+    update_cache: 'yes'
+
+- name: 'install bpftrace dependencies'
+  apt:
+    update_cache: 'yes'
+    cache_valid_time: 3600
+    name: '{{ item }}'
+    state: 'present'
+  with_items:
+    - 'bison'
+    - 'clang-6.0'
+    - 'clang-6.0-doc'
+    - 'clang-tools-6.0'
+    - 'cmake'
+    - 'flex'
+    - 'g++'
+    - 'git'
+    - 'libclang-6.0-dev'
+    - 'libclang-common-6.0-dev'
+    - 'libclang1-6.0'
+    - 'libelf-dev'
+    - 'libfl-dev'
+    - 'libllvm6.0'
+    - 'llvm-6.0'
+    - 'llvm-6.0-dev'
+    - 'llvm-6.0-runtime'
+    - 'zlib1g-dev'
+
 - name: 'clone bpftrace repository'
   git:
     repo: 'https://github.com/iovisor/bpftrace'
