--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
-roles_path    = ./roles
-inventory     = ./configuration/hosts
+roles_path                      = ./roles
+inventory                       = ./configuration/hosts
+allow_world_readable_tmpfiles   = true
 
 [ssh_connection]
-control_path  = %(directory)s/%%h-%%r
+control_path                    = %(directory)s/%%h-%%r
