--- a/vagrant/runtime/Vagrantfile
+++ b/vagrant/runtime/Vagrantfile
@@ -13,8 +13,9 @@ Vagrant.configure(2) do |config|
 
   config.vm.network 'private_network', ip: '192.168.10.4'
   config.vm.network "forwarded_port", guest: 25000, host: 25000
+  config.vm.network "forwarded_port", guest: 25001, host: 25001
 
   config.vm.synced_folder '.', '/vagrant', disabled: true
 
-  config.disksize.size = '15GB'
+  config.disksize.size = '30GB'
 end
