--- a/ansible/roles/vim/tasks/main.yml
+++ b/ansible/roles/vim/tasks/main.yml
@@ -41,7 +41,7 @@
     chdir: '{{ user_home }}/.vim/pack/cirocosta/start/YouCompleteMe'
   environment:
     HOME: '{{ user_home }}'
-    PATH: '/home/ubuntu/.cargo/bin:/usr/local/go/bin:{{ ansible_env.PATH }}'
+    PATH: '{{ user_home }}/.cargo/bin:/usr/local/go/bin:{{ ansible_env.PATH }}'
 
 - name: 'Set vim as default editor'
   copy:
